trunk/src/targets/udblogo/java/flipsTargetUdbLogoParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 flipsTargetUdbLogo.g 2010-09-13 18:30:37

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class flipsTargetUdbLogoParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FLY", "LTR", "CMD", "PAR", "POS", "X", "FIX", "REL", "GEO", "Y", "Z", "ROL", "PIT", "YAW", "PRE", "VEL", "SPD", "AIR", "GND", "ACT", "ELE", "AIL", "RUD", "FLA", "THR", "PCT", "RPM", "TRI", "TIM", "RAD", "DIR", "L", "R", "CW", "CCW", "FloatingPointLiteral", "BinaryLiteral", "OctalLiteral", "DecimalLiteral", "HexLiteral", "Identifier", "StringLiteral", "Digit", "NonZeroDigit", "BinaryDigit", "HexDigit", "Exponent", "WS", "Comment", "LineComment", "'-'"
    };
    public static final int AIL=25;
    public static final int FIX=10;
    public static final int THR=28;
    public static final int FLA=27;
    public static final int SPD=20;
    public static final int OctalLiteral=41;
    public static final int AIR=21;
    public static final int LineComment=53;
    public static final int Exponent=50;
    public static final int YAW=17;
    public static final int PRE=18;
    public static final int EOF=-1;
    public static final int HexDigit=49;
    public static final int Identifier=44;
    public static final int ROL=15;
    public static final int TIM=32;
    public static final int T__54=54;
    public static final int Comment=52;
    public static final int POS=8;
    public static final int RAD=33;
    public static final int ELE=24;
    public static final int PAR=7;
    public static final int GEO=12;
    public static final int HexLiteral=43;
    public static final int ACT=23;
    public static final int GND=22;
    public static final int L=35;
    public static final int VEL=19;
    public static final int TRI=31;
    public static final int CMD=6;
    public static final int PIT=16;
    public static final int REL=11;
    public static final int R=36;
    public static final int Digit=46;
    public static final int DecimalLiteral=42;
    public static final int Y=13;
    public static final int X=9;
    public static final int CCW=38;
    public static final int Z=14;
    public static final int StringLiteral=45;
    public static final int CW=37;
    public static final int WS=51;
    public static final int FLY=4;
    public static final int RUD=26;
    public static final int LTR=5;
    public static final int DIR=34;
    public static final int NonZeroDigit=47;
    public static final int BinaryLiteral=40;
    public static final int BinaryDigit=48;
    public static final int FloatingPointLiteral=39;
    public static final int PCT=29;
    public static final int RPM=30;

    // delegates
    // delegators


        public flipsTargetUdbLogoParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public flipsTargetUdbLogoParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return flipsTargetUdbLogoParser.tokenNames; }
    public String getGrammarFileName() { return "flipsTargetUdbLogo.g"; }


      public StringBuilder output = new StringBuilder();

      public void emitNoTab(String instruction) {
        output.append(instruction + "\n");
      }
      
      public void emit(String instruction) {
        output.append("\t" + instruction + "\n");
      }

      public void emit(String instruction, double value) {
        output.append("\t" + instruction + "(" + value + ")" + "\n");
      }

      public void emit(String instruction, double value0, double value1) {
        output.append("\t" + instruction + "(" + value0 + "," + value1 + ")" + "\n");
      }



    // $ANTLR start "flightPlan"
    // flipsTargetUdbLogo.g:54:1: flightPlan : ( instruction )* ;
    public final void flightPlan() throws RecognitionException {
        try {
            // flipsTargetUdbLogo.g:55:2: ( ( instruction )* )
            // flipsTargetUdbLogo.g:55:4: ( instruction )*
            {
            emitNoTab("const struct logoInstructionDef instructions[] = {\n");
            // flipsTargetUdbLogo.g:56:3: ( instruction )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=FLY && LA1_0<=CMD)||LA1_0==POS||(LA1_0>=VEL && LA1_0<=SPD)||LA1_0==ACT||(LA1_0>=TRI && LA1_0<=DIR)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // flipsTargetUdbLogo.g:56:3: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_flightPlan38);
            	    instruction();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            emitNoTab("} ;");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "flightPlan"


    // $ANTLR start "instruction"
    // flipsTargetUdbLogo.g:60:1: instruction : ( fly | loiter | command | position | velocity | speed | actuator | trim | time | radius | direction );
    public final void instruction() throws RecognitionException {
        try {
            // flipsTargetUdbLogo.g:61:2: ( fly | loiter | command | position | velocity | speed | actuator | trim | time | radius | direction )
            int alt2=11;
            switch ( input.LA(1) ) {
            case FLY:
                {
                alt2=1;
                }
                break;
            case LTR:
                {
                alt2=2;
                }
                break;
            case CMD:
                {
                alt2=3;
                }
                break;
            case POS:
                {
                alt2=4;
                }
                break;
            case VEL:
                {
                alt2=5;
                }
                break;
            case SPD:
                {
                alt2=6;
                }
                break;
            case ACT:
                {
                alt2=7;
                }
                break;
            case TRI:
                {
                alt2=8;
                }
                break;
            case TIM:
                {
                alt2=9;
                }
                break;
            case RAD:
                {
                alt2=10;
                }
                break;
            case DIR:
                {
                alt2=11;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // flipsTargetUdbLogo.g:61:4: fly
                    {
                    pushFollow(FOLLOW_fly_in_instruction54);
                    fly();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // flipsTargetUdbLogo.g:62:4: loiter
                    {
                    pushFollow(FOLLOW_loiter_in_instruction59);
                    loiter();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // flipsTargetUdbLogo.g:63:4: command
                    {
                    pushFollow(FOLLOW_command_in_instruction64);
                    command();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // flipsTargetUdbLogo.g:64:4: position
                    {
                    pushFollow(FOLLOW_position_in_instruction69);
                    position();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // flipsTargetUdbLogo.g:65:4: velocity
                    {
                    pushFollow(FOLLOW_velocity_in_instruction74);
                    velocity();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // flipsTargetUdbLogo.g:66:4: speed
                    {
                    pushFollow(FOLLOW_speed_in_instruction79);
                    speed();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // flipsTargetUdbLogo.g:67:4: actuator
                    {
                    pushFollow(FOLLOW_actuator_in_instruction84);
                    actuator();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    // flipsTargetUdbLogo.g:68:4: trim
                    {
                    pushFollow(FOLLOW_trim_in_instruction89);
                    trim();

                    state._fsp--;


                    }
                    break;
                case 9 :
                    // flipsTargetUdbLogo.g:69:4: time
                    {
                    pushFollow(FOLLOW_time_in_instruction94);
                    time();

                    state._fsp--;


                    }
                    break;
                case 10 :
                    // flipsTargetUdbLogo.g:70:4: radius
                    {
                    pushFollow(FOLLOW_radius_in_instruction99);
                    radius();

                    state._fsp--;


                    }
                    break;
                case 11 :
                    // flipsTargetUdbLogo.g:71:4: direction
                    {
                    pushFollow(FOLLOW_direction_in_instruction104);
                    direction();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "instruction"


    // $ANTLR start "fly"
    // flipsTargetUdbLogo.g:76:1: fly : FLY ;
    public final void fly() throws RecognitionException {
        try {
            // flipsTargetUdbLogo.g:76:5: ( FLY )
            // flipsTargetUdbLogo.g:76:7: FLY
            {
            match(input,FLY,FOLLOW_FLY_in_fly116); 
            emit("");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "fly"


    // $ANTLR start "loiter"
    // flipsTargetUdbLogo.g:78:1: loiter : LTR ;
    public final void loiter() throws RecognitionException {
        try {
            // flipsTargetUdbLogo.g:78:8: ( LTR )
            // flipsTargetUdbLogo.g:78:10: LTR
            {
            match(input,LTR,FOLLOW_LTR_in_loiter126); 
            emit("");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "loiter"


    // $ANTLR start "command"
    // flipsTargetUdbLogo.g:80:1: command : ( CMD x= integerValue | CMD PAR y= numericValue );
    public final void command() throws RecognitionException {
        int x = 0;

        double y = 0.0;


        try {
            // flipsTargetUdbLogo.g:80:9: ( CMD x= integerValue | CMD PAR y= numericValue )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==CMD) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==PAR) ) {
                    alt3=2;
                }
                else if ( ((LA3_1>=BinaryLiteral && LA3_1<=HexLiteral)||LA3_1==54) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // flipsTargetUdbLogo.g:80:11: CMD x= integerValue
                    {
                    match(input,CMD,FOLLOW_CMD_in_command136); 
                    pushFollow(FOLLOW_integerValue_in_command140);
                    x=integerValue();

                    state._fsp--;

                    emit("// CMD " + x + "\n");

                    }
                    break;
                case 2 :
                    // flipsTargetUdbLogo.g:81:4: CMD PAR y= numericValue
                    {
                    match(input,CMD,FOLLOW_CMD_in_command147); 
                    match(input,PAR,FOLLOW_PAR_in_command149); 
                    pushFollow(FOLLOW_numericValue_in_command153);
                    y=numericValue();

                    state._fsp--;

                    emit("// CMD PAR " + y);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "command"


    // $ANTLR start "position"
    // flipsTargetUdbLogo.g:86:1: position : ( POS X FIX x= numericValue | POS X REL x= numericValue | POS X GEO x= numericValue | POS Y FIX x= numericValue | POS Y REL x= numericValue | POS Y GEO x= numericValue | POS Z FIX x= numericValue | POS Z REL x= numericValue | POS ROL FIX x= numericValue | POS ROL REL x= numericValue | POS PIT FIX x= numericValue | POS PIT REL x= numericValue | POS YAW FIX x= numericValue | POS YAW REL x= numericValue | POS PRE FIX x= numericValue | POS PRE REL x= numericValue );
    public final void position() throws RecognitionException {
        double x = 0.0;


        try {
            // flipsTargetUdbLogo.g:86:9: ( POS X FIX x= numericValue | POS X REL x= numericValue | POS X GEO x= numericValue | POS Y FIX x= numericValue | POS Y REL x= numericValue | POS Y GEO x= numericValue | POS Z FIX x= numericValue | POS Z REL x= numericValue | POS ROL FIX x= numericValue | POS ROL REL x= numericValue | POS PIT FIX x= numericValue | POS PIT REL x= numericValue | POS YAW FIX x= numericValue | POS YAW REL x= numericValue | POS PRE FIX x= numericValue | POS PRE REL x= numericValue )
            int alt4=16;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // flipsTargetUdbLogo.g:86:11: POS X FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position166); 
                    match(input,X,FOLLOW_X_in_position168); 
                    match(input,FIX,FOLLOW_FIX_in_position170); 
                    pushFollow(FOLLOW_numericValue_in_position174);
                    x=numericValue();

                    state._fsp--;

                    emit("EAST",x);

                    }
                    break;
                case 2 :
                    // flipsTargetUdbLogo.g:87:4: POS X REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position181); 
                    match(input,X,FOLLOW_X_in_position183); 
                    match(input,REL,FOLLOW_REL_in_position185); 
                    pushFollow(FOLLOW_numericValue_in_position189);
                    x=numericValue();

                    state._fsp--;

                    emit("FD",x);

                    }
                    break;
                case 3 :
                    // flipsTargetUdbLogo.g:88:4: POS X GEO x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position196); 
                    match(input,X,FOLLOW_X_in_position198); 
                    match(input,GEO,FOLLOW_GEO_in_position200); 
                    pushFollow(FOLLOW_numericValue_in_position204);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS X GEO " + x);

                    }
                    break;
                case 4 :
                    // flipsTargetUdbLogo.g:89:4: POS Y FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position211); 
                    match(input,Y,FOLLOW_Y_in_position213); 
                    match(input,FIX,FOLLOW_FIX_in_position215); 
                    pushFollow(FOLLOW_numericValue_in_position219);
                    x=numericValue();

                    state._fsp--;

                    emit("NORTH",x);

                    }
                    break;
                case 5 :
                    // flipsTargetUdbLogo.g:90:4: POS Y REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position226); 
                    match(input,Y,FOLLOW_Y_in_position228); 
                    match(input,REL,FOLLOW_REL_in_position230); 
                    pushFollow(FOLLOW_numericValue_in_position234);
                    x=numericValue();

                    state._fsp--;

                    emit("RT",x);

                    }
                    break;
                case 6 :
                    // flipsTargetUdbLogo.g:91:4: POS Y GEO x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position241); 
                    match(input,Y,FOLLOW_Y_in_position243); 
                    match(input,GEO,FOLLOW_GEO_in_position245); 
                    pushFollow(FOLLOW_numericValue_in_position249);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS Y GEO " + x);

                    }
                    break;
                case 7 :
                    // flipsTargetUdbLogo.g:92:4: POS Z FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position256); 
                    match(input,Z,FOLLOW_Z_in_position258); 
                    match(input,FIX,FOLLOW_FIX_in_position260); 
                    pushFollow(FOLLOW_numericValue_in_position264);
                    x=numericValue();

                    state._fsp--;

                    emit("SET_ALT",-x);

                    }
                    break;
                case 8 :
                    // flipsTargetUdbLogo.g:93:4: POS Z REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position271); 
                    match(input,Z,FOLLOW_Z_in_position273); 
                    match(input,REL,FOLLOW_REL_in_position275); 
                    pushFollow(FOLLOW_numericValue_in_position279);
                    x=numericValue();

                    state._fsp--;

                    emit("ALT_DOWN",x);

                    }
                    break;
                case 9 :
                    // flipsTargetUdbLogo.g:94:4: POS ROL FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position286); 
                    match(input,ROL,FOLLOW_ROL_in_position288); 
                    match(input,FIX,FOLLOW_FIX_in_position290); 
                    pushFollow(FOLLOW_numericValue_in_position294);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS ROL FIX " + x);

                    }
                    break;
                case 10 :
                    // flipsTargetUdbLogo.g:95:4: POS ROL REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position301); 
                    match(input,ROL,FOLLOW_ROL_in_position303); 
                    match(input,REL,FOLLOW_REL_in_position305); 
                    pushFollow(FOLLOW_numericValue_in_position309);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS ROL REL " + x);

                    }
                    break;
                case 11 :
                    // flipsTargetUdbLogo.g:96:4: POS PIT FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position316); 
                    match(input,PIT,FOLLOW_PIT_in_position318); 
                    match(input,FIX,FOLLOW_FIX_in_position320); 
                    pushFollow(FOLLOW_numericValue_in_position324);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS PIT FIX " + x);

                    }
                    break;
                case 12 :
                    // flipsTargetUdbLogo.g:97:4: POS PIT REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position331); 
                    match(input,PIT,FOLLOW_PIT_in_position333); 
                    match(input,REL,FOLLOW_REL_in_position335); 
                    pushFollow(FOLLOW_numericValue_in_position339);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS PIT REL " + x);

                    }
                    break;
                case 13 :
                    // flipsTargetUdbLogo.g:98:4: POS YAW FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position346); 
                    match(input,YAW,FOLLOW_YAW_in_position348); 
                    match(input,FIX,FOLLOW_FIX_in_position350); 
                    pushFollow(FOLLOW_numericValue_in_position354);
                    x=numericValue();

                    state._fsp--;

                    emit("SET_ANGLE",x);

                    }
                    break;
                case 14 :
                    // flipsTargetUdbLogo.g:99:4: POS YAW REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position361); 
                    match(input,YAW,FOLLOW_YAW_in_position363); 
                    match(input,REL,FOLLOW_REL_in_position365); 
                    pushFollow(FOLLOW_numericValue_in_position369);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS YAW REL " + x);

                    }
                    break;
                case 15 :
                    // flipsTargetUdbLogo.g:100:4: POS PRE FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position376); 
                    match(input,PRE,FOLLOW_PRE_in_position378); 
                    match(input,FIX,FOLLOW_FIX_in_position380); 
                    pushFollow(FOLLOW_numericValue_in_position384);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS PRE FIX " + x);

                    }
                    break;
                case 16 :
                    // flipsTargetUdbLogo.g:101:4: POS PRE REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position391); 
                    match(input,PRE,FOLLOW_PRE_in_position393); 
                    match(input,REL,FOLLOW_REL_in_position395); 
                    pushFollow(FOLLOW_numericValue_in_position399);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS PRE REL " + x);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "position"


    // $ANTLR start "velocity"
    // flipsTargetUdbLogo.g:106:1: velocity : ( VEL X FIX x= numericValue | VEL X REL x= numericValue | VEL Y FIX x= numericValue | VEL Y REL x= numericValue | VEL Z FIX x= numericValue | VEL Z REL x= numericValue | VEL ROL FIX x= numericValue | VEL ROL REL x= numericValue | VEL PIT FIX x= numericValue | VEL PIT REL x= numericValue | VEL YAW FIX x= numericValue | VEL YAW REL x= numericValue | VEL PRE FIX x= numericValue | VEL PRE REL x= numericValue );
    public final void velocity() throws RecognitionException {
        double x = 0.0;


        try {
            // flipsTargetUdbLogo.g:106:9: ( VEL X FIX x= numericValue | VEL X REL x= numericValue | VEL Y FIX x= numericValue | VEL Y REL x= numericValue | VEL Z FIX x= numericValue | VEL Z REL x= numericValue | VEL ROL FIX x= numericValue | VEL ROL REL x= numericValue | VEL PIT FIX x= numericValue | VEL PIT REL x= numericValue | VEL YAW FIX x= numericValue | VEL YAW REL x= numericValue | VEL PRE FIX x= numericValue | VEL PRE REL x= numericValue )
            int alt5=14;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // flipsTargetUdbLogo.g:106:11: VEL X FIX x= numericValue
                    {
                    match(input,VEL,FOLLOW_VEL_in_velocity412); 
                    match(input,X,FOLLOW_X_in_velocity414); 
                    match(input,FIX,FOLLOW_FIX_in_velocity416); 
                    pushFollow(FOLLOW_numericValue_in_velocity420);
                    x=numericValue();

                    state._fsp--;

                    emit("// VEL X FIX " + x);
